updated ChangeLogs and touched jws for tokentool again...

--- a/web/src/tokentool/ChangeLog
+++ b/web/src/tokentool/ChangeLog
@@ -1,3 +1,6 @@
+1.0M2 Changes and Features              released 17 Aug 2005
+    * added multiple reticles
+
 1.0M1 Changes and Features              released 12 May 2005
     * added menubar
     * added drag-n-drop from thumbnail view
