--- a/web/src/maptool/ChangeLog
+++ b/web/src/maptool/ChangeLog
@@ -1,3 +1,13 @@
+1.0M3 Changes and Features              released 17 Aug 2005
+    * Asset movement measurement (and cookie crumbs)
+    * Large token movement is relative to upper left
+    * Pointer tool
+    * Background loading of asset images
+    * Can reconnect to server after disconnect
+    * Asset groups persist across sessions
+    * Asset panel can be refreshed with F5
+    * Pen size across zoom levels is consistent
+
 1.0M3 Changes and Features              released 12 May 2005
     * Server menu to start or join server
     * undo drawing elements
